Fix responsive design layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ p {
 body {
   background-color: #fdfdfd;
   margin: 0 auto;
-  position:relative;
+  position: relative;
   max-width: 1170px;
 }
 
@@ -86,7 +86,7 @@ section {
 
 nav {
   width: 100%;
-  padding: 20px;
+  padding: 22px;
   background-color: #252831;
   text-align:center;
 }
@@ -203,7 +203,8 @@ nav h1 a {
   background-color: #ccc;
   display: block;
   max-width: 100%;
-  min-height: 248px;
+  /*min-height: 248px;*/
+  max-height: 248px;
   min-width: 100%;
   margin: 20px 0 0;
 }
@@ -395,6 +396,9 @@ nav h1 a {
 
 /* Medium devices (tablets, less than 992px)*/
 @media (max-width: 991px) {
+  nav h1 a {
+    font-size: 22px;
+  }
 }
 
 /* Small devices (landscape phones, less than 768px)*/
@@ -418,20 +422,28 @@ nav h1 a {
   #restaurant-cuisine {
     width: 90%;
   }
-
 }
 
 /* Extra small devices (portrait phones, less than 576px)*/
 @media (max-width: 575px) {
   nav h1 a {
-    font-size: 17px;
-    letter-spacing: 7px;
+    font-size: 16px;
+    letter-spacing: 6px;
   }
 
+  #restaurants-list li,
   #reviews-list li,
   #restaurant-img,
   #restaurant-cuisine {
     width: 100%;
+  }
+
+  #restaurant-name {
+     font-size: 22px;
+  }
+
+  #reviews-container h2 {
+    font-size: 26px;
   }
 
   .review-name,
